--- a/documents/blog-open.html
+++ b/documents/blog-open.html
@@ -133,13 +133,13 @@
 		</div>
 		<section class="blog-open container">
 			<div class="blog-open-container">
-				<img src="../img/blog-1.jpg" alt="" aria-hidden="true" class="blog-open__img">
+				<img src="../img/blog-1.jpg" alt="" aria-hidden="true" class="blog-open__img js-opacity">
 				<h1 class="blog-open__title">В нашем салоне появилась новая услуга - шугаринг!</h1>
 				<date class="blog-open__date">27 мая 2019</date>
 				<p>Противоположная точка зрения подразумевает, что сторонники тоталитаризма в науке могут быть объединены в целые кластеры себе подобных. Принимая во внимание показатели успешности, сложившаяся структура организации является качественно новой ступенью стандартных подходов.</p>
 				<p>Господа, синтетическое тестирование напрямую зависит от переосмысления внешнеэкономических политик. Идейные соображения высшего порядка, а также постоянное информационно-пропагандистское обеспечение нашей деятельности способствует подготовке и реализации приоритизации разума над эмоциями. С другой стороны, высококачественный прототип будущего проекта способствует повышению качества новых предложений.</p>
 				<p>Вот вам яркий пример современных тенденций - постоянное информационно-пропагандистское обеспечение нашей деятельности выявляет срочную потребность поставленных обществом задач. Каждый из нас понимает очевидную вещь: убежденность некоторых оппонентов деятельности способствует подготовке и реализации приоритизации разума над эмоциями. С другой стороны, высококачественный прототип будущего проекта способствует повышению качества новых предложений. </p>
-				<img src="../img/blog-open-img.jpg" alt="" aria-hidden="true" class="blog-open__img">
+				<img src="../img/blog-open-img.jpg" alt="" aria-hidden="true" class="blog-open__img js-opacity">
 				<p>Господа, синтетическое тестирование напрямую зависит от переосмысления внешнеэкономических политик. Идейные соображения высшего порядка, а также постоянное информационно-пропагандистское обеспечение нашей деятельности способствует подготовке и реализации приоритизации разума над эмоциями. С другой стороны, высококачественный прототип будущего проекта способствует повышению качества новых предложений.</p>
 				<p>Вот вам яркий пример современных тенденций - постоянное информационно-пропагандистское обеспечение нашей деятельности выявляет срочную потребность поставленных обществом задач. Каждый из нас понимает очевидную вещь: убежденность некоторых оппонентов деятельности способствует подготовке и реализации приоритизации разума над эмоциями. С другой стороны, высококачественный прототип будущего проекта способствует повышению качества новых предложений. </p>
 			</div>
