--- a/documents/service-open.html
+++ b/documents/service-open.html
@@ -124,7 +124,7 @@
 	</header>
 
 	<main>
-		<div class="service__img position-relative" style="background-image: url(../img/service-open.jpg);">
+		<div class="service__img js-opacity position-relative" style="background-image: url(../img/service-open.jpg);">
 			<div class="breadcrumbs-substrate">
 				<div class="breadcrumbs-substrate__layer"></div>
 				<div class="breadcrumbs-substrate__img" style="background-image: url(../img/service-open.jpg);"></div>
@@ -141,7 +141,7 @@
 		<section class="service container">
 			<h1 class="title-l service__title">Стрижка</h1>
 			<p class="service__text">С другой стороны, граница обучения кадров способствует подготовке и реализации модели развития. Задача организации, в особенности же высокое качество позиционных исследований обеспечивает широкому кругу (специалистов) участие в формировании экономической целесообразности принимаемых решений. В рамках спецификации современных стандартов, элементы политического процесса.</p>
-			<button class="modal-btn standart-btn standart-btn_big service__btn" data-target="appointment">записаться к мастеру</button>
+			<button class="modal-btn standart-btn standart-btn_big service__btn js-animation" data-target="appointment">записаться к мастеру</button>
 		</section>
 		<div class="services-container container">
 			<h1 class="services__title services__title_small title-m">Категории и цены</h1>
