--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 	</header>
 
 	<main>
-		<section class="main-slider mx-auto">
+		<section class="main-slider mx-auto js-opacity">
 			<div class="slider-container w-100 h-100">
 				<div class="main-slider__item" style="background-image: url(img/main-slider-img.jpg);"></div>
 				<div class="main-slider__item" style="background-image: url(img/main-slider-img.jpg);"></div>
@@ -135,28 +135,28 @@
 				<div class="row">
 					<div class="col-md-6 col-xl-3">
 						<div class="features-item">
-							<img src="img/features-1.svg" alt="" aria-hidden="true" class="features__number">
+							<img src="img/features-1.svg" alt="" aria-hidden="true" class="features__number js-animation">
 							<span class="features-item__title text-uppercase font-weight-bold ">Опытные специалисты</span>
 							<span class="features-item__text">В нашей команде работают только профессионалы своего дела</span>
 						</div>
 					</div>
 					<div class="col-md-6 col-xl-3">
 						<div class="features-item">
-							<img src="img/features-2.svg" alt="" aria-hidden="true" class="features__number">
+							<img src="img/features-2.svg" alt="" aria-hidden="true" class="features__number js-animation">
 							<span class="features-item__title text-uppercase font-weight-bold ">Весь спектр услуг</span>
 							<span class="features-item__text">Вы обязательно найдете в списке наших услуг то, что ищете</span>
 						</div>
 					</div>
 					<div class="col-md-6 col-xl-3">
 						<div class="features-item">
-							<img src="img/features-3.svg" alt="" aria-hidden="true" class="features__number">
+							<img src="img/features-3.svg" alt="" aria-hidden="true" class="features__number js-animation">
 							<span class="features-item__title text-uppercase font-weight-bold ">качественный сервис</span>
 							<span class="features-item__text">Уютная атмосфера и доброжелательные сотрудники всегда поднимут вам настроение</span>
 						</div>
 					</div>
 					<div class="col-md-6 col-xl-3">
 						<div class="features-item">
-							<img src="img/features-4.svg" alt="" aria-hidden="true" class="features__number">
+							<img src="img/features-4.svg" alt="" aria-hidden="true" class="features__number js-animation">
 							<span class="features-item__title text-uppercase font-weight-bold ">в центре города</span>
 							<span class="features-item__text">К нам удобно добираться с любой точки города даже в час пик</span>
 						</div>
@@ -172,7 +172,7 @@
 						<p class="about__text">Многолетний опыт делает ПЕРСОНА Lab самой экспертной сетью салонов красоты. Мы постоянно развиваемся и работаем над собой, чтобы быть лучшими для вас. Нам важно не только обеспечить идеальное качество услуг, но и создать комфортную, душевную атмосферу в салонах, чтобы каждый новый клиент становился постоянным.</p>
 					</div>
 					<div class="col-lg-7 d-flex align-items-center">
-						<div class="symbol d-flex flex-column justify-content-between">
+						<div class="symbol d-flex flex-column justify-content-between js-opacity">
 							<span class="symbol__text">Ответственно.</span>
 							<span class="symbol__text">Осознанно.</span>
 							<span class="symbol__text">Чувственно.</span>
@@ -247,7 +247,7 @@
 					<div class="col-lg-7 col-xl-6 d-flex flex-column justify-content-center">
 						<h1 class="promo__title title-m">Подарочный сертификат</h1>
 						<p>имидж-лаборатории “ПЕРСОНА” - это  модный, приятный, а самое главное всегда актуальный подарок! Закажите сейчас и получите скидку в 10% на любую нашу услугу!</p>
-						<button class="modal-btn promo__btn standart-btn standart-btn_big" data-target="sertificate">заказать сертификат</button>
+						<button class="modal-btn promo__btn standart-btn standart-btn_big js-animation" data-target="sertificate">заказать сертификат</button>
 					</div>
 				</div>
 			</div>
@@ -292,7 +292,7 @@
 					<div class="col-lg-7 col-xl-6 d-flex flex-column justify-content-center">
 						<h1 class="promo__title title-m">Домашний уход</h1>
 						<p>Профессиональные линии косметики для домашнего применения помогут вам продлить эффект от салонных процедур</p>
-						<button class="promo__btn standart-btn standart-btn_big">выбрать</button>
+						<button class="promo__btn standart-btn standart-btn_big js-animation">выбрать</button>
 					</div>
 				</div>
 			</div>
