--- a/documents/services.html
+++ b/documents/services.html
@@ -125,7 +125,7 @@
 
 	<main>
 		
-		<div class="services__img position-relative" style="background-image: url(../img/services-1.jpg);">
+		<div class="services__img js-opacity position-relative" style="background-image: url(../img/services-1.jpg);">
 			<div class="breadcrumbs-substrate">
 				<div class="breadcrumbs-substrate__layer"></div>
 				<div class="breadcrumbs-substrate__img" style="background-image: url(../img/services-1.jpg);"></div>
@@ -198,7 +198,7 @@
 				</li>
 			</ul>
 		</div>
-		<div class="services__img" style="background-image: url(../img/services-2.jpg);">
+		<div class="services__img js-opacity" style="background-image: url(../img/services-2.jpg);">
 		</div>
 		<div class="services-container container">
 			<h1 class="services__title title-l title-l_big">Косметология</h1>
@@ -380,7 +380,7 @@
 				</li>
 			</ul>
 		</div>
-		<div class="services__img" style="background-image: url(../img/services-3.jpg);">
+		<div class="services__img js-opacity" style="background-image: url(../img/services-3.jpg);">
 		</div>
 		<div class="services-container container">
 			<h1 class="services__title title-l title-l_big">Ногтевой сервис</h1>
@@ -435,7 +435,7 @@
 				</li>
 			</ul>
 		</div>
-		<div class="services__img" style="background-image: url(../img/services-4.jpg);">
+		<div class="services__img js-opacity" style="background-image: url(../img/services-4.jpg);">
 		</div>
 		<div class="services-container container">
 			<h1 class="services__title title-l title-l_big">Солярий</h1>
