--- a/documents/services.html
+++ b/documents/services.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="../css/media.css">
 </head>
 <body>
-	<header class="header position-relative border-bottom">
+	<header class="header position-relative">
 		<div class="header-top d-flex justify-content-md-between align-items-center mx-auto">
 			<div class="header-cities d-none d-lg-block">
 				<span class="header-cities__item">Коломна</span>
